# Tech-Challenge-Fase-2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  metrics.json  params.yaml  pyproject.toml
.dvc/: config
configs/: default.yaml
docker/mlflow/: Dockerfile
docs/: architecture.md
scripts/: evaluate.py  feature_eng.py  preprocess.py  train.py  validate_env.py
src/ecommerce_recommender/: __init__.py  config.py  exceptions.py
src/ecommerce_recommender/data_loaders/: __init__.py  base.py  factory.py  retailrocket.py
src/ecommerce_recommender/evaluation/: __init__.py  metrics.py  ranking.py
src/ecommerce_recommender/models/: __init__.py  base.py  factory.py  item_knn.py  ncf.py
src/ecommerce_recommender/preprocessing/: __init__.py  cleaning.py  encoding.py  splitting.py
tests/: test_config.py  test_data_loaders.py  test_evaluation.py  test_models.py  test_preprocessing.py  test_scripts.py  test_train_evaluate_scripts.py
